--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </div>
 <script type="text/javascript">
     $(function() {
-      $('./').click(function() {
+      $('a').click(function() {
         document.location = $(this).attr('href');
         return false;
       });
