fixing local path

--- a/pages/tom-holland/spiderman3-2.html
+++ b/pages/tom-holland/spiderman3-2.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiverso | Spiderman</title>
-    <link href="../../assets/css/internal.css" rel="stylesheet" />
+    <link href="../.../assets/css/internal.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
   />
   </head>
   <body>
     <div class="s-wrapper">
       <video autoplay loop muted>
-        <source src="/assets/videos/spiderman2-2019-trailer.mp4" type="video/mp4">
+        <source src="./assets/videos/spiderman2-2019-trailer.mp4" type="video/mp4">
       </video>
       <div class="s-left-column">
         <nav class="navigator">
           <div class="navigator__icon">
             <a href="../../index.html">
-              <img src="../../assets/images/icons/spiderman1-tom.png" />
+              <img src="../..../assets/images/icons/spiderman1-tom.png" />
             </a>
           </div>
           <ul>
-            <li><a href="/pages/tom-holland/spiderman3-1.html">01</a></li>
-            <li><a href="/pages/tom-holland/spiderman3-2.html">02</a></li>
-            <li><a href="/pages/tom-holland/spiderman3-3.html">03</a></li>
+            <li><a href="./pages/tom-holland/spiderman3-1.html">01</a></li>
+            <li><a href="./pages/tom-holland/spiderman3-2.html">02</a></li>
+            <li><a href="./pages/tom-holland/spiderman3-3.html">03</a></li>
           </ul>
         </nav>
       </div>
@@ -33,7 +33,7 @@
         <div class="s-main-content__top">
           <div class="s-logo">
             <img
-              src="/assets/images/spiderman-tom/movie-02/logo.png"
+              src="../assets/images/spiderman-tom/movie-02/logo.png"
               alt="Spiderman (2019)"
               title="Spiderman (2019)"/>
           </div>
@@ -73,9 +73,9 @@
         <div class="gallery">
             <ul>
               <li>
-                <a data-fancybox href="/assets/images/spiderman-tom/movie-02/gallery/image-01-full.jpeg"><img src="/assets/images/spiderman-tom/movie-02/gallery/image-01.jpeg" alt=""></a></li>
-              <li><a data-fancybox href="/assets/images/spiderman-tom/movie-02/gallery/image-02-full.jpeg"><img src="/assets/images/spiderman-tom/movie-02/gallery/image-02.jpeg" alt=""></a></li>
-              <li><a data-fancybox href="/assets/images/spiderman-tom/movie-02/gallery/image-03-full.jpeg"><img src="/assets/images/spiderman-tom/movie-02/gallery/image-03.jpeg" alt=""></a></li>
+                <a data-fancybox href="../assets/images/spiderman-tom/movie-02/gallery/image-01-full.jpeg"><img src="../assets/images/spiderman-tom/movie-02/gallery/image-01.jpeg" alt=""></a></li>
+              <li><a data-fancybox href="../assets/images/spiderman-tom/movie-02/gallery/image-02-full.jpeg"><img src="../assets/images/spiderman-tom/movie-02/gallery/image-02.jpeg" alt=""></a></li>
+              <li><a data-fancybox href="../assets/images/spiderman-tom/movie-02/gallery/image-03-full.jpeg"><img src="../assets/images/spiderman-tom/movie-02/gallery/image-03.jpeg" alt=""></a></li>
           
             </ul>
           </div>
