--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </li>
       
       <li class="s-menu__item">
-        <a href="./pages/tobey-maguire/spiderman1.html">Tobey Maguire</a>
+        <a href="./pages/tobey-maguire/spiderman1.html">Tobey Maaaaguire</a>
       </li>
       <li class="s-menu__item s-menu__icon">
         <img src="../assets/images/icons/spider.svg" alt="Spider-man">
