--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="SpiderVerse/pages/tobey-maguire/spiderman1.html">Tobey Maguire</a>
       </li>
       <li class="s-menu__item s-menu__icon">
-        <img src=".SpiderVerse/assets/images/icons/spider.svg" alt="Spider-man">
+        <img src="SpiderVerse/assets/images/icons/spider.svg" alt="Spider-man">
         <li class="s-menu__item">
           <a href="SpiderVerse/pages/andrew-garfield/spiderman2-1.html">Andrew Garfield</a>
         </li>
@@ -33,18 +33,18 @@
   <div class="s-container">
     <div class="s-cards-carousel" style="transform: translateZ(-40vw) rotateY(0deg);">
       <a href="SpiderVerse/pages/tobey-maguire/spiderman1.html" class="s-card" id="spider-man-01">
-        <img class="s-card__background"src=".SpiderVerse/assets/images/pic-sm-bg-01.jpg" alt="">
-        <img  class="s-card__image"src=".SpiderVerse/assets/images/spider-man-01.png" alt="Tobey Maguire">
+        <img class="s-card__background"src="SpiderVerse/assets/images/pic-sm-bg-01.jpg" alt="">
+        <img  class="s-card__image"src="SpiderVerse/assets/images/spider-man-01.png" alt="Tobey Maguire">
         <h2 class="s-card__title">Tobey Maguire</h2>
       </a>
       <a href="SpiderVerse/pages/tom-holland/spiderman3-1.html" class="s-card" id="spider-man-03">
-        <img  class="s-card__background"src=".SpiderVerse/assets/images/pic-sm-bg-02.jpg" alt="">
-        <img class="s-card__image"src=".SpiderVerse/assets/images/spider-man-02.png" alt="Tom Holland">
+        <img  class="s-card__background"src="SpiderVerse/assets/images/pic-sm-bg-02.jpg" alt="">
+        <img class="s-card__image"src="SpiderVerse/assets/images/spider-man-02.png" alt="Tom Holland">
         <h2 class="s-card__title">Tom Holland</h2>
         </a>
       <a href="SpiderVerse/pages/andrew-garfield/spiderman2-1.html" class="s-card" id="spider-man-02">
-        <img class="s-card__background" src=".SpiderVerse/assets/images/pic-sm-bg-03.jpg" alt="">
-        <img class="s-card__image" src=".SpiderVerse/assets/images/spider-man-03.png" alt="Andrew Garfield">
+        <img class="s-card__background" src="SpiderVerse/assets/images/pic-sm-bg-03.jpg" alt="">
+        <img class="s-card__image" src="SpiderVerse/assets/images/spider-man-03.png" alt="Andrew Garfield">
         <h2 class="s-card__title">Andrew Garfield</h2>
   </a>
     </div>
