--- a/pages/tobey-maguire/spiderman3.html
+++ b/pages/tobey-maguire/spiderman3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiverso | Spiderman</title>
-    <link href="../..SpiderVerse/assets/css/internal.css" rel="stylesheet" />
+    <link href="../.SpiderVerse/assets/css/internal.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
   />
   </head>
@@ -18,7 +18,7 @@
         <nav class="navigator">
           <div class="navigator__icon">
             <a href="../../index.html">
-              <img src="../...SpiderVerse/assets/images/icons/spiderman1.png" />
+              <img src="../..SpiderVerse/assets/images/icons/spiderman1.png" />
             </a>
           </div>
           <ul>
@@ -33,7 +33,7 @@
         <div class="s-main-content__top">
           <div class="s-logo">
             <img
-              src=".SpiderVerse/assets/images/spiderman-tobey/movie-03/logo.png"
+              src="SpiderVerse/assets/images/spiderman-tobey/movie-03/logo.png"
               alt="Spiderman (2007)"
               title="Spiderman (2007)"/>
           </div>
@@ -74,9 +74,9 @@
         <div class="gallery">
             <ul>
               <li>
-                <a data-fancybox href=".SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-01-full.png"><img src=".SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-01.png" alt=""></a></li>
-              <li><a data-fancybox href=".SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-02-full.png"><img src=".SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-02.png" alt=""></a></li>
-              <li><a data-fancybox href=".SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-03-full.png"><img src=".SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-03.png" alt=""></a></li>
+                <a data-fancybox href="SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-01-full.png"><img src="SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-01.png" alt=""></a></li>
+              <li><a data-fancybox href="SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-02-full.png"><img src="SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-02.png" alt=""></a></li>
+              <li><a data-fancybox href="SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-03-full.png"><img src="SpiderVerse/assets/images/spiderman-tobey/movie-03/gallery/image-03.png" alt=""></a></li>
             </ul>
           </div>
         </div>
