--- a/pages/tom-holland/spiderman3-1.html
+++ b/pages/tom-holland/spiderman3-1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiverso | Spiderman</title>
-    <link href="../..SpiderVerse/assets/css/internal.css" rel="stylesheet" />
+    <link href="../.SpiderVerse/assets/css/internal.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
   />
   </head>
@@ -18,7 +18,7 @@
         <nav class="navigator">
           <div class="navigator__icon">
             <a href="../../index.html">
-              <img src="../...SpiderVerse/assets/images/icons/spiderman1-tom.png" />
+              <img src="../..SpiderVerse/assets/images/icons/spiderman1-tom.png" />
             </a>
           </div>
           <ul>
@@ -33,7 +33,7 @@
         <div class="s-main-content__top">
           <div class="s-logo">
             <img
-              src=".SpiderVerse/assets/images/spiderman-tom/movie-01/logo1.png"
+              src="SpiderVerse/assets/images/spiderman-tom/movie-01/logo1.png"
               alt="Spiderman (2002)"
               title="Spiderman (2002)"/>
           </div>
@@ -73,10 +73,10 @@
         <div class="gallery">
             <ul>
               <li>
-                <a data-fancybox href=".SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-01-full.png"><img src=".SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-01.png" alt=""></a></li>
-              <li><a data-fancybox href=".SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-02-full.png"><img src=".SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-02.png" alt=""></a></li>
-              <li><a data-fancybox href=".SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-03-full.png"><img src=".SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-03.png" alt=""></a></li>
-              <li><a data-fancybox href=".SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-04-full.png"><img src=".SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-04.png" alt=""></a></li>
+                <a data-fancybox href="SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-01-full.png"><img src="SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-01.png" alt=""></a></li>
+              <li><a data-fancybox href="SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-02-full.png"><img src="SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-02.png" alt=""></a></li>
+              <li><a data-fancybox href="SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-03-full.png"><img src="SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-03.png" alt=""></a></li>
+              <li><a data-fancybox href="SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-04-full.png"><img src="SpiderVerse/assets/images/spiderman-tom/movie-01/gallery/image-04.png" alt=""></a></li>
             </ul>
           </div>
         </div>
