--- a/pages/tobey-maguire/spiderman1.html
+++ b/pages/tobey-maguire/spiderman1.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiverso | Spiderman</title>
-    <link href="SpiderVerse/assets/css/internal.css" rel="stylesheet" />
+    <link href="../assets/css/internal.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
   />
   </head>
   <body>
     <div class="s-wrapper">
       <video autoplay loop muted>
-        <source src="SpiderVerse/assets/videos/spiderman-2002-trailer.mp4" type="video/mp4">
+        <source src="../assets/videos/spiderman-2002-trailer.mp4" type="video/mp4">
       </video>
       <div class="s-left-column">
         <nav class="navigator">
           <div class="navigator__icon">
-            <a href="SpiderVerse/index.html">
-              <img src="SpiderVerse/assets/images/icons/spiderman1.png" />
+            <a href="../index.html">
+              <img src="../assets/images/icons/spiderman1.png" />
             </a>
           </div>
           <ul>
-            <li><a href="SpiderVerse/pages/tobey-maguire/spiderman1.html">01</a></li>
-            <li><a href="SpiderVerse/pages/tobey-maguire/spiderman2.html">02</a></li>
-            <li><a href="SpiderVerse/pages/tobey-maguire/spiderman3.html">03</a></li>
+            <li><a href="../tobey-maguire/spiderman1.html">01</a></li>
+            <li><a href="../tobey-maguire/spiderman2.html">02</a></li>
+            <li><a href="../tobey-maguire/spiderman3.html">03</a></li>
           </ul>
         </nav>
       </div>
@@ -33,7 +33,7 @@
         <div class="s-main-content__top">
           <div class="s-logo">
             <img
-              src="SpiderVerse/assets/images/spiderman-tobey/movie-01/logo.png"
+              src="../assets/images/spiderman-tobey/movie-01/logo.png"
               alt="Spiderman (2002)"
               title="Spiderman (2002)"/>
           </div>
@@ -81,9 +81,9 @@
         <div class="gallery">
             <ul>
               <li>
-                <a data-fancybox href="SpiderVerse/assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"><img src="SpiderVerse/assets/images/spiderman-tobey/movie-01/gallery/image-01.png" alt=""></a></li>
-              <li><a data-fancybox href="SpiderVerse/assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"><img src="SpiderVerse/assets/images/spiderman-tobey/movie-01/gallery/image-02.png" alt=""></a></li>
-              <li><a data-fancybox href="SpiderVerse/assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"><img src="SpiderVerse/assets/images/spiderman-tobey/movie-01/gallery/image-03.png" alt=""></a></li>
+                <a data-fancybox href="../assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"><img src="../assets/images/spiderman-tobey/movie-01/gallery/image-01.png" alt=""></a></li>
+              <li><a data-fancybox href="../assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"><img src="../assets/images/spiderman-tobey/movie-01/gallery/image-02.png" alt=""></a></li>
+              <li><a data-fancybox href="../assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"><img src="../assets/images/spiderman-tobey/movie-01/gallery/image-03.png" alt=""></a></li>
             </ul>
           </div>
         </div>
