--- a/pages/tobey-maguire/spiderman2.html
+++ b/pages/tobey-maguire/spiderman2.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiverso | Spiderman</title>
-    <link href="../.SpiderVerse/assets/css/internal.css" rel="stylesheet" />
+    <link href="../.../assets/css/internal.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
   />
   </head>
   <body>
     <div class="s-wrapper">
       <video autoplay loop muted>
-        <source src="SpiderVerse/assets/videos/spiderman2-2004-trailer.mp4" type="video/mp4">
+        <source src="../assets/videos/spiderman2-2004-trailer.mp4" type="video/mp4">
       </video>
       <div class="s-left-column">
         <nav class="navigator">
           <div class="navigator__icon">
             <a href="../../index.html">
-              <img src="../..SpiderVerse/assets/images/icons/spiderman1.png" />
+              <img src="../..../assets/images/icons/spiderman1.png" />
             </a>
           </div>
           <ul>
-            <li><a href="SpiderVerse/pages/tobey-maguire/spiderman1.html">01</a></li>
-            <li><a href="SpiderVerse/pages/tobey-maguire/spiderman2.html">02</a></li>
-            <li><a href="SpiderVerse/pages/tobey-maguire/spiderman3.html">03</a></li>
+            <li><a href="../tobey-maguire/spiderman1.html">01</a></li>
+            <li><a href="../tobey-maguire/spiderman2.html">02</a></li>
+            <li><a href="../tobey-maguire/spiderman3.html">03</a></li>
           </ul>
         </nav>
       </div>
@@ -33,7 +33,7 @@
         <div class="s-main-content__top">
           <div class="s-logo">
             <img
-              src="SpiderVerse/assets/images/spiderman-tobey/movie-02/logo.png"
+              src="../assets/images/spiderman-tobey/movie-02/logo.png"
               alt="Spiderman (2004)"
               title="Spiderman (2004)"/>
           </div>
@@ -74,9 +74,9 @@
         <div class="gallery">
             <ul>
               <li>
-                <a data-fancybox href="SpiderVerse/assets/images/spiderman-tobey/movie-02/gallery/image-01-full.png"><img src="SpiderVerse/assets/images/spiderman-tobey/movie-02/gallery/image-01.png" alt="Homem Aranha parando o trem"></a></li>
-              <li><a data-fancybox href="SpiderVerse/assets/images/spiderman-tobey/movie-02/gallery/image-02-full.png"><img src="SpiderVerse/assets/images/spiderman-tobey/movie-02/gallery/image-02.png" alt="Homem Aranha sendo esganado pelo dr.Octavius"></a></li>
-              <li><a data-fancybox href="SpiderVerse/assets/images/spiderman-tobey/movie-02/gallery/image-03-full.png"><img src="SpiderVerse/assets/images/spiderman-tobey/movie-02/gallery/image-03.png" alt="Homem aranha perplexado olhando para suas mãos"></a></li>
+                <a data-fancybox href="../assets/images/spiderman-tobey/movie-02/gallery/image-01-full.png"><img src="../assets/images/spiderman-tobey/movie-02/gallery/image-01.png" alt="Homem Aranha parando o trem"></a></li>
+              <li><a data-fancybox href="../assets/images/spiderman-tobey/movie-02/gallery/image-02-full.png"><img src="../assets/images/spiderman-tobey/movie-02/gallery/image-02.png" alt="Homem Aranha sendo esganado pelo dr.Octavius"></a></li>
+              <li><a data-fancybox href="../assets/images/spiderman-tobey/movie-02/gallery/image-03-full.png"><img src="../assets/images/spiderman-tobey/movie-02/gallery/image-03.png" alt="Homem aranha perplexado olhando para suas mãos"></a></li>
             </ul>
           </div>
         </div>
