--- a/pages/andrew-garfield/spiderman2-2.html
+++ b/pages/andrew-garfield/spiderman2-2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiverso | Spiderman</title>
-    <link href="../.../assets/css/internal.css" rel="stylesheet" />
+    <link href="../assets/css/internal.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
   />
   </head>
@@ -17,8 +17,8 @@
       <div class="s-left-column">
         <nav class="navigator">
           <div class="navigator__icon">
-            <a href="../../index.html">
-              <img src="../..../assets/images/icons/spiderman1-andrew.png" />
+            <a href="../index.html">
+              <img src="../assets/images/icons/spiderman1-andrew.png" />
             </a>
           </div>
           <ul>
@@ -53,7 +53,7 @@
           <div class="s-links">
             <ul>
               <li>
-                <a href="../..../assets/images/icons/spiderman2-andrew.png"
+                <a href="../assets/images/icons/spiderman2-andrew.png"
                 class="link-button"
                 target="_blank">
                 <span class="icon">
