--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </li>
       
       <li class="s-menu__item">
-        <a href="./tobey-maguire/spiderman1.html">Tobey Maguire</a>
+        <a href="../tobey-maguire/spiderman1.html">Tobey Maguire</a>
       </li>
       <li class="s-menu__item s-menu__icon">
         <img src="./assets/images/icons/spider.svg" alt="Spider-man">
@@ -36,7 +36,7 @@
   </nav>
   <div class="s-container">
     <div class="s-cards-carousel" style="transform: translateZ(-40vw) rotateY(0deg);">
-      <a href="./tobey-maguire/spiderman1.html" class="s-card" id="spider-man-01">
+      <a href="../tobey-maguire/spiderman1.html" class="s-card" id="spider-man-01">
         <img class="s-card__background"src="./assets/images/pic-sm-bg-01.jpg" alt="">
         <img  class="s-card__image"src="./assets/images/spider-man-01.png" alt="Tobey Maguire">
         <h2 class="s-card__title">Tobey Maguire</h2>
