--- a/index.html
+++ b/index.html
@@ -20,35 +20,35 @@
       </li>
       
       <li class="s-menu__item">
-        <a href="SpiderVerse/tobey-maguire/spiderman1.html">Tobey Maguire</a>
+        <a href="/tobey-maguire/spiderman1.html">Tobey Maguire</a>
       </li>
       <li class="s-menu__item s-menu__icon">
-        <img src="./assets/images/icons/spider.svg" alt="Spider-man">
+        <img src="/assets/images/icons/spider.svg" alt="Spider-man">
         <li class="s-menu__item">
-          <a href="./andrew-garfield/spiderman2-1.html">Andrew Garfield</a>
+          <a href="/andrew-garfield/spiderman2-1.html">Andrew Garfield</a>
         </li>
       </li> 
       <li class="s-menu__item">
-        <a href= "./tom-holland/spiderman3-1.html">Tom Holland</a>
+        <a href= "/tom-holland/spiderman3-1.html">Tom Holland</a>
       </li>
     </li> 
     </ul>
   </nav>
   <div class="s-container">
     <div class="s-cards-carousel" style="transform: translateZ(-40vw) rotateY(0deg);">
-      <a href="SpiderVerse/tobey-maguire/spiderman1.html" class="s-card" id="spider-man-01">
+      <a href="/tobey-maguire/spiderman1.html" class="s-card" id="spider-man-01">
         <img class="s-card__background"src="./assets/images/pic-sm-bg-01.jpg" alt="">
         <img  class="s-card__image"src="./assets/images/spider-man-01.png" alt="Tobey Maguire">
         <h2 class="s-card__title">Tobey Maguire</h2>
       </a>
-      <a href="./tom-holland/spiderman3-1.html" class="s-card" id="spider-man-03">
+      <a href="/tom-holland/spiderman3-1.html" class="s-card" id="spider-man-03">
         <img  class="s-card__background"src="./assets/images/pic-sm-bg-02.jpg" alt="">
         <img class="s-card__image"src="./assets/images/spider-man-02.png" alt="Tom Holland">
         <h2 class="s-card__title">Tom Holland</h2>
         </a>
-      <a href="./andrew-garfield/spiderman2-1.html" class="s-card" id="spider-man-02">
+      <a href="/andrew-garfield/spiderman2-1.html" class="s-card" id="spider-man-02">
         <img class="s-card__background" src="./assets/images/pic-sm-bg-03.jpg" alt="">
-        <img class="s-card__image" src="./assets/images/spider-man-03.png" alt="Andrew Garfield">
+        <img class="s-card__image" src="/assets/images/spider-man-03.png" alt="Andrew Garfield">
         <h2 class="s-card__title">Andrew Garfield</h2>
   </a>
     </div>
